tests-integration/tests/roundtrip/invalid/syntax/unexpected_token/04/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/unexpected_token/04/input.essence:2:11:
  |
2 | such that for i in s . i % 2 = 0
  |           ^^^
Error: Symbol not found "for"

tests/roundtrip/invalid/syntax/unexpected_token/04/input.essence:2:15:
  |
2 | such that for i in s . i % 2 = 0
  |               ^
Error: Symbol not found "i"

tests/roundtrip/invalid/syntax/unexpected_token/04/input.essence:2:15:
  |
2 | such that for i in s . i % 2 = 0
  |               ^
Missing ,

tests/roundtrip/invalid/syntax/unexpected_token/04/input.essence:2:22:
  |
2 | such that for i in s . i % 2 = 0
  |                      ^^^^^^^^^^^
Skipped tokens

